# StereoVision

./: CMakeLists.txt  README.md
StereoLib/: CMakeLists.txt  Calibrator.cpp  Calibrator.h  Disparity.cpp  Disparity.h  Filters.cpp  Filters.h  StereoCapture.cpp  StereoCapture.h
calib_imgs/: left.xml  right.xml
src/: main.cpp
